--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,50 +1,35 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+<html lang="en">
 <head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }}</title>
-   <meta name="author" content="Tom Preston-Werner" />
+	<meta charset="utf-8">
+   	<title>{{ page.title }}</title>
+   	<meta name="author" content="Joseph Adams" />
 
-   <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+   	<!-- syntax highlighting CSS -->
+   	<link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 
-   <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen, projection" />
+   	<!-- Homepage CSS -->
+   	<link rel="stylesheet" href="/css/main.css" type="text/css" media="screen, projection" />
 </head>
 <body>
 
 <div class="site">
-  <div class="title">
-    <a href="/">Tom Preston-Werner</a>
-    <a class="extra" href="/">home</a>
-  </div>
+  	<div class="title">
+    	<a href="/">Joseph Adams</a>
+    	<a class="extra" href="/">home</a>
+  	</div>
   
-  {{ content }}
+  	{{ content }}
   
-  <div class="footer">
-    <div class="contact">
-      <p>
-        Tom Preston-Werner<br />
-        Cofounder of <a href="http://github.com/">GitHub</a><br />
-        tom@mojombo.com
-      </p>
-    </div>
-    <div class="contact">
-      <p>
-        <a href="http://github.com/mojombo/">github.com/mojombo</a><br />
-        <a href="http://twitter.com/mojombo/">twitter.com/mojombo</a><br />
-        <a href="http://flickr.com/photos/mojombo/">flickr.com/photos/mojombo</a>
-      </p>
-    </div>
-    <div class="rss">
-      <a href="http://feeds.feedburner.com/tom-preston-werner">
-        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-      </a>
-    </div>
-  </div>
-</div>
-
-<a href="http://github.com/mojombo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
+  	<div class="footer">
+    	<div class="contact">
+      		<p>
+        		Joseph Adams<br />
+        		whitegolem@gmail.com
+      		</p>
+    	</div>
+  	</div>
+	</div>
 
 </body>
 </html>
