--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
   	<div class="title">
     	<a href="/">Joseph Adams</a>
     	<a class="extra" href="/">home</a>
+    	<a class="extra" href="/about">about</a>
   	</div>
   
   	{{ content }}
