--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,20 +5,16 @@
    	<title>{{ page.title }}</title>
    	<meta name="author" content="Joseph Adams" />
 
-   	<!-- syntax highlighting CSS -->
-   	<link rel="stylesheet" href="/css/syntax.css" type="text/css" />
-
-   	<!-- Homepage CSS -->
    	<link rel="stylesheet" href="/css/main.css" type="text/css" media="screen, projection" />
 </head>
 <body>
 
 <div class="site">
-  	<div class="title">
-    	<a href="/">Joseph Adams</a>
-    	<a class="extra" href="/">home</a>
+	<header>
+   		<a href="/">Joseph Adams</a>
+   		<a class="extra" href="/">home</a>
     	<a class="extra" href="/about">about</a>
-  	</div>
+	</header>
   
   	{{ content }}
   
