--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="site">
-	<header>
+	<header class="page-header">
    		<a href="/">Joseph Adams</a>
    		<a class="extra" href="/">home</a>
     	<a class="extra" href="/about">about</a>
