--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ ul.posts {
   width: 100%;
 }
 
-  .site .page-header a {
+/*  .site .page-header a {
     color: #a00;
     text-decoration: none;
   }
@@ -157,7 +157,7 @@ ul.posts {
       .site .footer .rss img {
         border: 0;
       }
-
+*/
 /*****************************************************************************/
 /*
 /* Posts
