--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ ul.posts {
   width: 100%;
 }
 
-/*  .site .page-header a {
+  .site .page-header a {
     color: #a00;
     text-decoration: none;
   }
@@ -148,16 +148,6 @@ ul.posts {
         color: #8085C1;
       }
 
-    .site .footer .rss {
-      margin-top: 1.1em;
-      margin-right: -.2em;
-      float: right;
-    }
-
-      .site .footer .rss img {
-        border: 0;
-      }
-*/
 /*****************************************************************************/
 /*
 /* Posts
