--- a/css/main.css
+++ b/css/main.css
@@ -98,13 +98,10 @@ ul.posts {
   letter-spacing: -0.1em;
   color: #777;
   text-align: right;
-  background-color: #ccc;
+  background: rgba(204, 204, 204, 0.5)
   position: fixed;
   top: 0;
-  right: 0;
-  opacity: 0.5;
-  filter: alpha(opacity = 50);
-  z-index: 1;
+  left: 0;
   width: 100%;
 }
 
