--- a/css/main.css
+++ b/css/main.css
@@ -95,9 +95,7 @@ ul.posts {
   padding: 0.4em;
   font-weight: bold;
   font-size: 2em;
-  letter-spacing: -0.1em;
-  color: #777;
-  text-align: right;
+  text-align: left;
   background: rgba(204, 204, 204, 0.5)
   position: fixed;
   top: 0;
