--- a/css/main.css
+++ b/css/main.css
@@ -96,14 +96,11 @@ ul.posts {
   font-weight: bold;
   font-size: 2em;
   letter-spacing: -0.1em;
-  text-align: right;
-  background: rgba(0, 0, 0, 0.6);
+  text-align: left;
+  background: rgba(204, 204, 204, 0.6);
   position: fixed;
   top: 0;
-  right: 0;
-  opacity: 0.5;
-  filter: alpha(opacity = 50);
-  z-index: 1;
+  left: 0;
   width: 100%;
 }
 
