--- a/css/main.css
+++ b/css/main.css
@@ -92,9 +92,15 @@ ul.posts {
   margin-bottom: 2em; */
 
   margin: 0;
+  
+
   padding: 0.4em;
-  font-weight: bold;
+  
+  
+
   font-size: 2em;
+  
+
   letter-spacing: -0.1em;
   text-align: left;
   background: rgba(204, 204, 204, 0.6);
@@ -102,10 +108,15 @@ ul.posts {
   top: 0;
   left: 0;
   width: 100%;
+  
+
+  font-style: italic;
+
 }
 
+
   .site .page-header a {
-    color: #a00;
+    color: #BE0000;
     text-decoration: none;
   }
 
@@ -144,6 +155,7 @@ ul.posts {
         color: #8085C1;
       }
 
+#home { padding-top: 3em; }
 /*****************************************************************************/
 /*
 /* Posts
