--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,23 +10,22 @@
 <body>
 
 <div class="site">
-	<header class="page-header">
-   		<a href="/">Joseph Adams</a>
-   		<a class="extra" href="/">home</a>
-    	<a class="extra" href="/about">about</a>
-	</header>
+  <div class="title">
+    <a href="/">Joseph Adams</a>
+    <a class="extra" href="/">home</a>
+  </div>
   
-  	{{ content }}
+  {{ content }}
   
-  	<div class="footer">
-    	<div class="contact">
-      		<p>
-        		Joseph Adams<br />
-        		whitegolem@gmail.com
-      		</p>
-    	</div>
-  	</div>
-	</div>
+  <div class="footer">
+    <div class="contact">
+      <p>
+        Joseph Adams<br />
+        whitegolem@gmail.com
+      </p>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
