--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,13 @@
         whitegolem@gmail.com
       </p>
     </div>
+    <div class="contact">
+      <p>
+        <a href="http://github.com/jcla1/">github.com/jcla1</a><br />
+        <a href="http://twitter.com/jcla1/">twitter.com/jcla1</a><br />
+        <a href="https://plus.google.com/109982208260057168917/posts">plus.google.com/109982208260057168917/posts</a>
+      </p>
+    </div>
   </div>
 </div>
 
