--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,8 @@
     <div class="contact">
       <p>
         Joseph Adams<br />
-        whitegolem@gmail.com
+        <a href="mailto:whitegolem@gmail.com">whitegolem@gmail.com</a>
+        <a href="http://jcla1.com">jcla1.com</a>
       </p>
     </div>
     <div class="contact">
