--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
     <div class="contact">
       <p>
         Joseph Adams<br />
-        <a href="mailto:whitegolem@gmail.com">whitegolem@gmail.com</a>
+        <a href="mailto:whitegolem@gmail.com">whitegolem@gmail.com</a><br />
         <a href="http://jcla1.com">jcla1.com</a>
       </p>
     </div>
