--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,5 +47,12 @@
   </div>
 </div>
 
+<script>
+    var _gaq=[['_setAccount','UA-12395541-8'],['_trackPageview']];
+    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+    s.parentNode.insertBefore(g,s)}(document,'script'));
+</script>
+
 </body>
 </html>
