removed subs. from disqus

--- a/css/main.css
+++ b/css/main.css
@@ -199,3 +199,11 @@ ul.posts {
   #related h2 {
     margin-bottom: 1em;
   }
+
+/*****************************************************************************/
+/*
+/* Disqus
+/*
+/*****************************************************************************/
+
+#dsp-pagination { display: none; }
