--- a/css/main.css
+++ b/css/main.css
@@ -206,4 +206,4 @@ ul.posts {
 /*
 /*****************************************************************************/
 
-#dsp-pagination { display: none; }
+#dsq-pagination { display: none; }
