Added plus page and webmaster tools validation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,15 +8,14 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta http-equiv="Content-Type" content="text/html">
+  <meta name="google-site-verification" content="xLdL56j0SwgMQ_zaX9jYVsRdm4THscM3NFAYIRhuVdg" />
 	
-   	<title>{{ page.title }}</title>
-	<meta name="description" content="">
-  	<meta name="author" content="">
+  <title>{{ page.title }}</title>
+	<meta name="description" content="A blog about tech.">
+  <meta name="author" content="Joseph Adams">
 
-   	<link rel="stylesheet" href="/css/main.css" type="text/css" media="screen, projection" />
-	{% if page.extracss %}
-	<link rel="stylesheet" type="text/css" href="{{ page.extracss }}" />
-	{% endif %}
+  <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen, projection" />
+	{% if page.extracss %}<link rel="stylesheet" type="text/css" href="{{ page.extracss }}" />{% endif %}
 </head>
 <body>
 
@@ -41,7 +40,7 @@
       <p>
         <a href="http://github.com/jcla1/">github.com/jcla1</a><br />
         <a href="http://twitter.com/jcla1/">twitter.com/jcla1</a><br />
-        <a href="https://plus.google.com/109982208260057168917/posts">plus.google.com/109982208260057168917/posts</a>
+        <a href="http://jcla1.com/+">jcla1.com/+</a>
       </p>
     </div>
   </div>
