--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
       <p>
         <a href="http://github.com/jcla1/">github.com/jcla1</a><br />
         <a href="http://twitter.com/jcla1/">twitter.com/jcla1</a><br />
-        <a href="http://jcla1.com/+">jcla1.com/+</a>
+        <a href="https://plus.google.com/109982208260057168917/posts">plus.google.com/109982208260057168917</a>
       </p>
     </div>
   </div>
