--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta http-equiv="Content-Type" content="text/html">
   <meta name="google-site-verification" content="xLdL56j0SwgMQ_zaX9jYVsRdm4THscM3NFAYIRhuVdg" />
+  <link href="http://jcla1.com/rss.xml" rel="alternate" title="jcla1.com" type="application/atom+xml" />
+
 	
   <title>{{ page.title }}</title>
 	<meta name="description" content="A blog about tech.">
@@ -42,6 +44,11 @@
         <a href="http://twitter.com/jcla1/">twitter.com/jcla1</a><br />
         <a href="https://plus.google.com/109982208260057168917/posts">plus.google.com/109982208260057168917</a>
       </p>
+    </div>
+    <div class="rss">
+      <a href="http://jcla1.com/rss.xml">
+        <img src="/img/rss.png" alt="Subscribe to RSS Feed" />
+      </a>
     </div>
   </div>
 </div>
