--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,14 +40,14 @@
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/jcla1/">github.com/jcla1</a><br />
-        <a href="http://twitter.com/jcla1/">twitter.com/jcla1</a><br />
-        <a href="https://plus.google.com/109982208260057168917/posts">plus.google.com/109982208260057168917</a>
+        <a href="http://github.com/jcla1/"><img src="/img/github_32.png"></img></a>
+        <a href="http://twitter.com/jcla1/"><img src="/img/twitter_32.png"></img></a>
+        <a href="https://plus.google.com/109982208260057168917/posts"><img src="/img/google_32.png"></a>
       </p>
     </div>
     <div class="rss">
       <a href="http://jcla1.com/rss.xml">
-        <img src="/img/rss.png" alt="Subscribe to RSS Feed" />
+        <img src="/img/rss_32.png" alt="Subscribe to RSS Feed" />
       </a>
     </div>
   </div>
