--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
   <div class="title">
     <a href="/">Joseph Adams</a>
     <a class="extra" href="/">home</a>
+    <a class="extra" href="/about/">about</a>
     <!--a class="extra" href="/about/">about</a-->
   </div>
   
