--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,62 +1,8 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta http-equiv="Content-Type" content="text/html">
-  <meta name="google-site-verification" content="xLdL56j0SwgMQ_zaX9jYVsRdm4THscM3NFAYIRhuVdg" />
-  <link href="http://jcla1.com/rss.xml" rel="alternate" title="jcla1.com" type="application/atom+xml" />
-
-	
-  <title>{{ page.title }}</title>
-	<meta name="description" content="A blog about tech.">
-  <meta name="author" content="Joseph Adams">
-
-  <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen, projection" />
-	{% if page.extracss %}<link rel="stylesheet" type="text/css" href="{{ page.extracss }}" />{% endif %}
-</head>
-<body>
-
-<div class="site">
-  <div class="title">
-    <a href="/">Joseph Adams</a>
-    <a class="extra" href="/">home</a>
-    <a class="extra" href="/about/">about</a>
-    <iframe style="border: 0; margin: 0 0 0 1em; padding: 0;"
-    src="https://www.gittip.com/jcla1/widget.html" 
-    width="48pt" height="20pt"></iframe>
-    <!--a class="extra" href="/about/">about</a-->
-  </div>
-  
-  {{ content }}
-  
-  <div class="footer">
-    <div class="contact">
-      <p>
-        Joseph Adams<br />
-        <a href="mailto:whitegolem@gmail.com">whitegolem@gmail.com</a><br />
-        <a href="http://jcla1.com">jcla1.com</a>
-      </p>
-    </div>
-    <div class="contact">
-      <p>
-        <a href="http://github.com/jcla1/"><img src="/img/github_32.png"></img></a>
-        <a href="http://twitter.com/jcla1/"><img src="/img/twitter_32.png"></img></a>
-        <a href="https://plus.google.com/109982208260057168917/posts"><img src="/img/google_32.png"></a>
-      </p>
-    </div>
-    <div class="rss">
-      <a href="http://jcla1.com/rss.xml">
-        <img src="/img/rss_32.png" alt="Subscribe to RSS Feed" />
-      </a>
-    </div>
-  </div>
-</div>
-
-{% include analytics.html %}
-</body>
-</html>
+<meta charset="utf-8">
+<title>{{ page.title }}</title>
+<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700">
+<link rel="stylesheet" href="/public/css/style.css">
+<script src="/public/js/d3.v3.min.js?20130214"></script>
+{{ content }}
+<script src="/public/js/highlight.min.js"></script>
