Added alternate RSS link to layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>{{ page.title }}</title>
+<link rel="alternate" type="application/rss+xml" title="RSS feed" href="/rss.xml" />
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700">
 <link rel="stylesheet" href="/public/css/style.css">
 <script src="/public/js/d3.v3.min.js?20130214"></script>
