--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,3 +7,4 @@
 <script src="/public/js/d3.v3.min.js?20130214"></script>
 {{ content }}
 <script src="/public/js/highlight.min.js"></script>
+{% include analytics %}
