Added Gisp to projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,5 +1,9 @@
 <h2><a name="projects" href="#projects">#</a>Projects</h2>
 <p class="entity">
+  <span class="info"><i>Go</i></span><a href="https://github.com/jcla1/gisp">Gisp</a><br>
+  Lisp/Clojure-esque to <a href="http://golang.org">Go</a> compiler. Started out as a simple (macro-supporting) interpreter, though then the backend was rewitten to compile to Go. With that macro support was also dropped.
+</p>
+<p class="entity">
   <span class="info"><i>Go</i></span><a href="https://github.com/jcla1/yrs2013">YRS 2013 Project</a><br>
   My Project from Young-Rewired-State 2013.<br>
   Analyses Wikipedia articles' structure and lex to find places they need to be improved, using a <a href="http://en.wikipedia.org/wiki/Artificial_Neural_Networks">neural network</a> and a <a href="http://en.wikipedia.org/wiki/Ngram">ngram</a> model with <a href="http://en.wikipedia.org/wiki/Good-Turing">Good-Turing smoothing</a>.
