--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,7 +1,10 @@
 <h2><a name="projects" href="#projects">#</a>Projects</h2>
 <p class="entity">
   <span class="info"><i>Go</i></span><a href="https://github.com/jcla1/gisp">Gisp</a><br>
-  Lisp/Clojure-esque to <a href="http://golang.org">Go</a> compiler. Started out as a simple (macro-supporting) interpreter, though then the backend was rewitten to compile to Go. With that macro support was also dropped.
+  Lisp/Clojure-esque to <a href="http://golang.org">Go</a> compiler.
+  Started out as a simple (macro-supporting) interpreter, though then the backend was rewitten to compile to Go.
+  With that macro support was also dropped.<br />
+  (Also presented at #FOSEM 2014)
 </p>
 <p class="entity">
   <span class="info"><i>Go</i></span><a href="https://github.com/jcla1/yrs2013">YRS 2013 Project</a><br>
