Updated profile img, but still need text.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
 
 <h2><a name="about" href="#about">#</a>About</h2>
 
-<img style="position:absolute; height:144px;" src="http://jcla1.com/img/profile.jpg"></img>
+<img style="position:absolute; height:144px;" src="/public/img/profile.jpg"></img>
 <p style="margin-left:170px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies euismod odio vel tempor. Praesent sed risus mauris. Phasellus ut dolor at tortor bibendum fermentum vitae in libero. Proin eu nunc quis augue ullamcorper tempus. Praesent volutpat eleifend nulla. Donec id dui sit amet risus blandit pretium non eget justo. Aenean eleifend elit id leo imperdiet a placerat purus convallis. Nulla facilisi. Nullam tellus ante, dapibus vel porta id, condimentum eu dolor. Mauris faucibus cursus ligula at rhoncus.</p>
 
 -->
