Adjusted CSS for easier transition to microschema

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-{% include header.html %}
+{% include post_header.html %}
 
 {{ content }}
 
-{% include footer.html %}
+{% include post_footer.html %}
