Added some microdata markup

--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -1,4 +1,4 @@
 <header>
-  <aside>{{page.date | date: '%B %d, %Y'}}</aside>
+  <aside itemprop="datePublished">{{page.date | date: '%B %d, %Y'}}</aside>
   <a href='/' rel='author'>{{ site.title }}</a>
 </header>
