--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -1,6 +1,8 @@
+<div itemscope itemtype="http://schema.org/Blog">
 {% for post in site.posts limit: page.article_limit %}
-<p class="entity">
-    <span class="info"><i>{{ post.date | date: '%B %d, %Y' }}</i></span><a href="{{ post.url }}">{{ post.title }}</a><br>
-    {{ post.abstract }}
+<p class="entity" itemprop="blogPost">
+    <span class="info" itemprop="datePublished"><i>{{ post.date | date: '%B %d, %Y' }}</i></span><a href="{{ post.url }}" itemprop="url"><span itemprop="name">{{ post.title }}</span></a><br>
+    <span itemprop="description">{{ post.abstract }}</span>
 </p>
 {% endfor %}
+</div>
