--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,16 @@
 layout: default
 ---
 
+<div itemscope itemtype="http://schema.org/BlogPosting">
 {% include post_header.html %}
 
+<h1 itemprop="name">{{ page.title }}</h1>
+<meta itemprop="url" content="{{ post.url }}"></meta>
+<meta itemprop="description" content="{{ post.abstract }}"></meta>
+
+<div itemprop="articleBody">
 {{ content }}
+</div>
 
 {% include post_footer.html %}
+</div>
