--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
 {% include page_header.html %}
 
 <h1 itemprop="name">{{ page.title }}</h1>
-<meta itemprop="url" content="{{ page.url }}">
+<meta itemprop="url" content="http://jcla1.com{{ page.url }}">
 {{ content }}
 
 {% include page_footer.html %}
