--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@ layout: default
 {% include post_header.html %}
 
 <h1 itemprop="name">{{ page.title }}</h1>
-<meta itemprop="url" content="{{ post.url }}"></meta>
-<meta itemprop="description" content="{{ post.abstract }}"></meta>
+<meta itemprop="url" content="http://jcla1.com{{ page.url }}"></meta>
+<meta itemprop="description" content="{{ page.abstract }}"></meta>
 
 <div itemprop="articleBody">
 {{ content }}
