--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@ layout: default
 <h1 itemprop="name">{{ page.title }}</h1>
 <meta itemprop="url" content="http://jcla1.com{{ page.url }}"></meta>
 <meta itemprop="description" content="{{ page.abstract }}"></meta>
+<meta itemprop="wordCount" content="{{ page.content | number_of_words }}">
 
 <div itemprop="articleBody">
 {{ content }}
