--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div itemscope itemtype="http://schema.org/BlogPosting">
+<article itemscope itemtype="http://schema.org/BlogPosting">
 {% include post_header.html %}
 
 <h1 itemprop="name">{{ page.title }}</h1>
@@ -15,4 +15,4 @@ layout: default
 </div>
 
 {% include post_footer.html %}
-</div>
+</article>
