--- a/public/css/style.css
+++ b/public/css/style.css
@@ -181,7 +181,7 @@ h2 a {
   width: 740px;
 }
 
-h1, h2 {
+h1, h2, h3, h4, h5, h6 {
   font-family: "Yanone Kaffeesatz";
   text-rendering: optimizeLegibility;
 }
