--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,8 +7,8 @@
   (Also presented at #FOSEM 2014)
 </p>
 <p class="entity">
-  <span class="info"><i>Go</i></span><a href="https://github.com/jcla1/yrs2013">YRS 2013 Project</a><br>
-  My Project from Young-Rewired-State 2013.<br>
+  <span class="info"><i>Go</i></span><a href="https://github.com/jcla1/wikipedia_analyser">Wikipedia Analyser</a><br>
+  Project from Young-Rewired-State 2013.
   Analyses Wikipedia articles' structure and lex to find places they need to be improved, using a <a href="http://en.wikipedia.org/wiki/Artificial_Neural_Networks">neural network</a> and a <a href="http://en.wikipedia.org/wiki/Ngram">ngram</a> model with <a href="http://en.wikipedia.org/wiki/Good-Turing">Good-Turing smoothing</a>.
 </p>
 
@@ -23,8 +23,8 @@
 </p>
 
 <p class="entity">
-  <span class="info"><i>Javascript</i></span><a href="https://github.com/jcla1/yrs2012">YRS 2012 Project</a><br>
-  My Project from Young-Rewired-State 2012.<br>
+  <span class="info"><i>Javascript</i></span><a href="https://github.com/jcla1/yrs2012">News Recommendr</a><br>
+  Project from Young-Rewired-State 2012.
   It scrapes news sites and builds a model based on your interests, using a <a href="http://en.wikipedia.org/wiki/Bayesian_spam_filtering" title="Bayesian Filter">Bayesian Filter</a>.
 </p>
 
