--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -6,4 +6,13 @@
 
     ga('create', 'UA-12395541-8', 'jcla1.com');
     ga('send', 'pageview');
+
+    (function (tos) {
+        window.setInterval(function () {
+            tos = (function (t) {
+                return t[0] == 50 ? (parseInt(t[1]) + 1) + ':00' : (t[1] || '0') + ':' + (parseInt(t[0]) + 10);
+            })(tos.split(':').reverse());
+            ga('send', 'event', 'time', 'log', tos);
+        }, 10000);
+    })('00');
 </script>
