--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -23,7 +23,7 @@
 </p>
 
 <p class="entity">
-  <span class="info"><i>Javascript</i></span><a href="https://github.com/jcla1/yrs2012">News Recommendr</a><br>
+  <span class="info"><i>Javascript</i></span><a href="https://github.com/jcla1/news_recommendr">News Recommendr</a><br>
   Project from Young-Rewired-State 2012.
   It scrapes news sites and builds a model based on your interests, using a <a href="http://en.wikipedia.org/wiki/Bayesian_spam_filtering" title="Bayesian Filter">Bayesian Filter</a>.
 </p>
