--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,36 +1,31 @@
 <h2><a name="projects" href="#projects">#</a>Projects</h2>
 <p class="entity">
-  <span class="info"><i>Go</i></span><a href="https://github.com/jcla1/gisp">Gisp</a><br>
-  Lisp/Clojure-esque to <a href="http://golang.org">Go</a> compiler.
-  Started out as a simple (macro-supporting) interpreter, though then the backend was rewitten to compile to Go.
-  With that macro support was also dropped.<br />
-  (Also presented at #FOSEM 2014)
+    <span class="info"><i>Go</i></span><a href="https://github.com/jcla1/gisp">gisp</a><br>
+    Lisp/Clojure-esque to <a href="http://golang.org">Go</a> compiler.
+    Started out as a simple (macro-supporting) interpreter, though then the backend was rewitten to compile to Go.
+    With that macro support was also dropped.<br />
+    (Also presented at <a href="https://archive.fosdem.org/2014/">#FOSEM 2014</a>)
 </p>
 <p class="entity">
-  <span class="info"><i>Go</i></span><a href="https://github.com/jcla1/wikipedia_analyser">Wikipedia Analyser</a><br>
-  Project from Young-Rewired-State 2013.
-  Analyses Wikipedia articles' structure and lex to find places they need to be improved, using a <a href="http://en.wikipedia.org/wiki/Artificial_Neural_Networks">neural network</a> and a <a href="http://en.wikipedia.org/wiki/Ngram">ngram</a> model with <a href="http://en.wikipedia.org/wiki/Good-Turing">Good-Turing smoothing</a>.
+    <span class="info"><i>Go</i></span><a href="https://github.com/jcla1/wikipedia_analyser">Wikipedia Analyser</a><br>
+    Project from Young-Rewired-State 2013.
+    Analyses Wikipedia articles' structure and lex to find places they need to be improved, using a <a href="http://en.wikipedia.org/wiki/Artificial_Neural_Networks">neural network</a> and a <a href="http://en.wikipedia.org/wiki/Ngram">ngram</a> model with <a href="http://en.wikipedia.org/wiki/Good-Turing">Good-Turing smoothing</a>.
 </p>
-
 <p class="entity">
-  <span class="info"><i>Javascript</i></span><a href="https://github.com/jcla1/ulam">Ulam Spirals Algorithm</a><br>
-  An algorithm for generating <a href="http://en.wikipedia.org/wiki/Ulam_spiral">Ulam Spirals</a>, read the corresponding  <a href="/blog/2012/12/28/on-ulam-spirals-and-matrix-generation/">blog post here</a>.
+    <span class="info"><i>Javascript</i></span><a href="https://github.com/jcla1/ulam">Ulam Spirals Algorithm</a><br>
+    An algorithm for generating <a href="http://en.wikipedia.org/wiki/Ulam_spiral">Ulam Spirals</a>, read the corresponding  <a href="/blog/2012/12/28/on-ulam-spirals-and-matrix-generation/">blog post here</a>.
 </p>
-
 <p class="entity">
-  <span class="info"><i>Ruby</i></span><a href="https://github.com/jcla1/HN2JSON">HN2JSON</a><br>
-  A Ruby library for scraping data off <a href="http://news.ycombinator.com/" title="Hackernews">HackerNews</a>.
+    <span class="info"><i>Ruby</i></span><a href="https://github.com/jcla1/HN2JSON">HN2JSON</a><br>
+    A Ruby library for scraping data off <a href="http://news.ycombinator.com/" title="Hackernews">HackerNews</a>.
 </p>
-
 <p class="entity">
-  <span class="info"><i>Javascript</i></span><a href="https://github.com/jcla1/news_recommendr">News Recommendr</a><br>
-  Project from Young-Rewired-State 2012.
-  It scrapes news sites and builds a model based on your interests, using a <a href="http://en.wikipedia.org/wiki/Bayesian_spam_filtering" title="Bayesian Filter">Bayesian Filter</a>.
+    <span class="info"><i>Javascript</i></span><a href="https://github.com/jcla1/news_recommendr">News Recommendr</a><br>
+    Project from Young-Rewired-State 2012.
+    It scrapes news sites and builds a model based on your interests, using a <a href="http://en.wikipedia.org/wiki/Bayesian_spam_filtering" title="Bayesian Filter">Bayesian Filter</a>.
 </p>
-
 <p class="entity">
-  <span class="info"><i>Ruby</i></span><a href="https://github.com/jcla1/jruby-swing">Swing for JRuby</a><br>
-  Some Ruby classes to utilize <a href="http://en.wikipedia.org/wiki/Swing_(Java)" title="Java's Swing Toolkit">Java's Swing Toolkit</a>, for educational purposes.
+    <span class="info"><i>Ruby</i></span><a href="https://github.com/jcla1/jruby-swing">Swing for JRuby</a><br>
+    Some Ruby classes to utilize <a href="http://en.wikipedia.org/wiki/Swing_(Java)" title="Java's Swing Toolkit">Java's Swing Toolkit</a>, for educational purposes.
 </p>
-
 <p class="entity"><a href="https://github.com/jcla1">View more projects on Github</a></p>
