--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>{{ page.title }}</title>
+<title>{% if page.title %} {{ page.title }} - {% endif %} {{ site.title }}</title>
 <link rel="alternate" type="application/rss+xml" title="RSS feed" href="/rss.xml" />
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700">
 <link rel="stylesheet" href="/public/css/style.css">
 <script src="/public/js/d3.v3.min.js?20130214"></script>
+
+{% include header.html %}
 {{ content }}
+{% include footer.html %}
+
 <script src="/public/js/highlight.min.js"></script>
 {% include analytics.html %}
