--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,18 +1,13 @@
 ---
 layout: default
 ---
-
 <article itemscope itemtype="http://schema.org/BlogPosting">
-{% include post_header.html %}
+    <h1 itemprop="name">{{ page.title }}</h1>
+    <meta itemprop="url" content="http://jcla1.com{{ page.url }}">
+    <meta itemprop="description" content="{{ page.abstract | xml_escape }}">
+    <meta itemprop="wordCount" content="{{ page.content | number_of_words }}">
 
-<h1 itemprop="name">{{ page.title }}</h1>
-<meta itemprop="url" content="http://jcla1.com{{ page.url }}"></meta>
-<meta itemprop="description" content="{{ page.abstract | xml_escape }}"></meta>
-<meta itemprop="wordCount" content="{{ page.content | number_of_words }}">
-
-<div itemprop="articleBody">
-{{ content }}
-</div>
-
-{% include post_footer.html %}
+    <div itemprop="articleBody">
+        {{ content }}
+    </div>
 </article>
