--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,2 @@
-<footer>
-    {% if page.date %}
-    <aside>{{page.date | date: '%B %d, %Y'}}</aside>
-    {% else %}
-    <aside><script>(function(){var a=Array('January','February','March','April','May','June','July','August','September','October','November','December'),b=new Date,c=b.getDate(),d=b.getMonth(),e=b.getFullYear();document.write(a[d]+' '+c+', '+e)})();</script></aside>
-    {% endif %}
-    <a href='/' rel='author'>{{ site.title }}</a>
-</footer>
+<footer><small>&copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>.  All rights reserved.<small></footer>
+<!--footer><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a></footer-->
